--- a/index.html
+++ b/index.html
@@ -241,7 +241,7 @@
                     Have an awesome Project idea ? let's discuss
                 </div>
                 <div class="section7-parts section7-part2">
-                    <form action="./image_assets/getintouch.php"  method="POST" class="section7-part2 section7-part2-form">
+                    <form action=""  method="POST" class="section7-part2 section7-part2-form">
                             <img src="./image_assets/email.png" alt="" class="section7-part2-img">
                             <input type="email" class="section7-part2-email">
                             <button class="section7-part2-button">send</button>
