--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="mainContainer-Section section-1">
 
                 <div class="section1-main">
-                    <img src="./image_assets/anass1.png" alt="" class="section-1-main-image">
+                    <img src="./image_assets/anass_main1.jpg" alt="" class="section-1-main-image">
                 </div>
                     
                     <div class="hireme-section1">
@@ -170,7 +170,7 @@
             </div>
             <div class=" mainContainer-Section section-4">
                 <div class="section4-part1 section4-parts">
-                    <img src="./image_assets/anass2-removebg-preview.png" alt="" class="section4-image">
+                    <img src="./image_assets/anass_main2.png" alt="" class="section4-image">
 
                 </div>
                 <div class="section4-part2 section4-parts">
