--- a/index.html
+++ b/index.html
@@ -276,9 +276,9 @@
                     <button class="section5_part1_btn">see all</button>
                 </div>
                 <div class="section5-part2">
-                    <img src="./projects/librairy.png" alt="project_overview1" class="Section5_part2_project_overview_images">
-                    <img src="./projects/NYTIMES_first_page.png" alt="project_overview1" class="Section5_part2_project_overview_images">
-                    <img src="./projects/chat_app.png" alt="project_overview1" class="Section5_part2_project_overview_images">
+                    <img src="./projects/librairy.png" alt="project_overview1" class="Section5_part2_project_overview_images" title="book librairy moockup named awesome books">
+                    <img src="./projects/NYTIMES_first_page.png" alt="project_overview1" class="Section5_part2_project_overview_images" title="clone of the new york times">
+                    <img src="./projects/chat_app.png" alt="project_overview1" class="Section5_part2_project_overview_images" title="a chat app mobile application">
                 </div>
                 <div class="section5-part3">
                     <div class="section5-part3-slider1"></div>
@@ -287,12 +287,12 @@
                     <div class="section5-part3-slider4"></div>
                 </div>
                 <div class="section5-part4">
+                    <marquee behavior="" direction=""></marquee>
                     <ul class="section5-part4-project-list">
-                        <li class="section5-part4lists">Landing Page</li>
-                        <li class="section5-part4lists">Product Design</li>
-                        <li class="section5-part4lists">animation</li>
-                        <li class="section5-part4lists">Glassmorphism</li>
-                        <li class="section5-part4lists">Cards</li>
+                        <li class="section5-part4lists">Product/project Design</li>
+                        <li class="section5-part4lists">front-end engineering</li>
+                        <li class="section5-part4lists">back-end engineering</li>
+                        <li class="section5-part4lists">documentations</li>
                     </ul>
                 </div>
                 <div class="section5-part5">
@@ -453,7 +453,7 @@
                 </div>
                 <div class="fC-box fC-box2">
                     <h2 class="FC-box2-title">Navigation</h2>
-                    <ul class="FC-box2-navlists">
+                    <ul class="FC-box2-navlists FCbox-lists">
                         <li class="FC-box2list">Home</li>
                         <li class="FC-box2list">About Us</li>
                         <li class="FC-box2list">Service</li>
@@ -463,7 +463,7 @@
                 </div>
                 <div class="fC-box fC-box3">
                      <h2 class="FC-box3-title">Contact</h2>
-                    <ul class="FC-box3-navlists">
+                    <ul class="FC-box3-navlists FCbox-lists">
                         <li class="FC-box3list">+20 11 43 63 73 41</li>
                         <li class="FC-box3list">fawzisayed1209@gmail.com</li>
                         <li class="FC-box3list">fazwiuiux.com</li>
