--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
             <div class="mainContainer-Section section-1">
 
                 <div class="section1-main">
-                    <img src="./projects/main_anass1.png" alt="" class="section-1-main-image">
+                    <img src="./projects/past-forward-1960s__1_-removebg-preview (1).png" alt="" class="section-1-main-image">
                 </div>
                     
                     <div class="hireme-section1">
