--- a/index.html
+++ b/index.html
@@ -307,7 +307,7 @@
             </div>
             
             <div class="mainContainer-Section section-6">
-                <h3 class="section6-title">Testimonials That Speak to </h3>
+                <h3 class="section6-title">Technologies used </h3>
                     <p class="section6-paragraphs">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                         Consequatur provident quae, tempora ipsam, reprehenderit saepe odio, earum autem deleniti obcaecati perspiciatis molestiae quos tenetur 
