--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
 
             <div class=" mainContainer-Section section-4">
                 <div class="section4-part1 section4-parts">
-                    <img src="./projects/main_anass2.png" alt="" class="section4-image">
+                    <img src="./image_assets/Me.png" alt="" class="section4-image">
 
                 </div>
                 <div class="section4-part2 section4-parts">
@@ -314,7 +314,7 @@
                         debitis voluptatum vel maxime ea libero?
                     </p>
                     <div class="section6-imageContainer">
-                        <img src="./image_assets/section6-testimonials.png" alt="" class="section6-tetimonials">
+                       
                     </div>
                     
             </div>
