--- a/index.html
+++ b/index.html
@@ -314,7 +314,11 @@
                         debitis voluptatum vel maxime ea libero?
                     </p>
                     <div class="section6-imageContainer">
-                       
+                       <p align="center">
+  <a href="https://skillicons.dev">
+    <img src="https://skillicons.dev/icons?i=git,github,nodejs,js,react,ts,html,css,scss,python,cpp,c#,supabase,mysql,sqlite,wasm"/>
+  </a>
+</p>
                     </div>
                     
             </div>
