--- a/index.html
+++ b/index.html
@@ -307,18 +307,20 @@
             </div>
             
             <div class="mainContainer-Section section-6">
+                <div class="section1">
                 <h3 class="section6-title">Technologies used </h3>
                     <p class="section6-paragraphs">
                         Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
                         Consequatur provident quae, tempora ipsam, reprehenderit saepe odio, earum autem deleniti obcaecati perspiciatis molestiae quos tenetur 
                         debitis voluptatum vel maxime ea libero?
                     </p>
-                    <div class="section6-imageContainer">
+                    </div>
+                    <div class="section6-imageContainer section2">
                        <p align="center">
-  <a href="https://skillicons.dev">
-    <img src="https://skillicons.dev/icons?i=git,github,nodejs,js,react,ts,html,css,scss,python,cpp,c#,supabase,mysql,sqlite,wasm"/>
-  </a>
-</p>
+                            <a href="https://skillicons.dev">
+                                    <img src="https://skillicons.dev/icons?i=git,github,nodejs,js,react,ts,html,css,scss,python,cpp,c#,supabase,mysql,sqlite,wasm"/>
+                            </a>
+                        </p>
                     </div>
                     
             </div>
