--- a/index.html
+++ b/index.html
@@ -250,21 +250,23 @@
 
             <div class=" mainContainer-Section section-4">
                 <div class="section4-part1 section4-parts">
-                    <img src="./image_assets/Me.png" alt="" class="section4-image">
+                    <p class="section4-part1-paragraph">currently Available</p>
+                    
+                    <div class="status"></div>
 
                 </div>
                 <div class="section4-part2 section4-parts">
-                    <h4>Why hire me ?</h4>
+                    <h4 class="section4-part2-title">Why hire me ?</h4>
                     <p>With a strong foundation in both front-end and back-end technologies, I bring a comprehensive approach to building scalable, efficient, and user-friendly web applications. My passion for writing clean, maintainable code and my problem-solving mindset ensure that projects are delivered on time and exceed expectations. Whether it's designing intuitive interfaces or optimizing server-side logic, I am dedicated to creating seamless digital experiences that drive business success.</p>
                         
                     <div class="section4-part2-whyhireme">
                         <div class="whyhireme-projects-chart">
-                            <p><img src="./image_assets/stare.png" alt="" class=""></p>
-                            <p>projects completed</p>
+                            <p><img src="./image_assets/stare.png" alt="" class="stare-img"></p>
+                            <p>trusted service</p>
                         </div>
                         <div class="whyhireme-projects-chart">
-                            <p><img src="./image_assets/stare.png" alt="" class=""></p>
-                            <p>projects completed</p>
+                            <p><img src="./image_assets/stare.png" alt="" class="stare-img"></p>
+                            <p>awarded</p>
                         </div>
                     </div>
                 </div>
