--- a/index.html
+++ b/index.html
@@ -274,21 +274,53 @@
             </div>
             <div class=" mainContainer-Section section-5" id="project-container">
                 <div class="section5-part1">
-                    <p class="section5-part1-title">Let's have a look at my portfolio</p>
+                    <p class="section5-part1-title">My recent works</p>
                     <button class="section5_part1_btn">see all</button>
                 </div>
                 <div class="section5-part2">
-                    <img src="./projects/librairy.png" alt="project_overview1" class="Section5_part2_project_overview_images" title="book librairy moockup named awesome books">
-                    <img src="./projects/NYTIMES_first_page.png" alt="project_overview1" class="Section5_part2_project_overview_images" title="clone of the new york times">
-                    <img src="./projects/chat_app.png" alt="project_overview1" class="Section5_part2_project_overview_images" title="a chat app mobile application">
+                    <div class="section5-part2-box1 section5-part2-box">
+                            <h3>awesome books</h3>
+                            <img src="./projects/librairy.png" alt="project_overview1" class="Section5_part2_project_overview_images" title="book librairy moockup named awesome books">
+                            <p>description : awesome books project is a full stack book librairy management project built with front-end and back-end technologies</p>
+                            <p>status : ongoing</p>
+                    </div>
+                    <div class="section5-part2-box2 section5-part2-box">
+                            <h3>clone of the New york times</h3>
+                        <img src="./projects/NYTIMES_first_page.png" alt="project_overview1" class="Section5_part2_project_overview_images" title="clone of the new york times">
+                        <p>description : this project is a full stack clone of the new york times with my own vision and specification and workflow built with front-end and back-end technologies</p>
+                        <p>status : ongoing</p>
+                    </div>
+                    <div class="section5-part2-box3 section5-part2-box">
+                                <h3>chat app</h3>
+                            <img src="./projects/chat_app.png" alt="project_overview1" class="Section5_part2_project_overview_images" title="a chat app mobile application">
+                            <p>description : an example of a chat app android/ios application workflow built with front-end and back-end technologies </p>
+                            <p>status : ongoing</p>
+                    </div>
                 </div>
-                <div class="section5-part3">
+                <div class="section7-parts section7-part3">
+                    <div class="section-7-staring">
+                        <img src="./image_assets/stare.png" alt="" class="section7-star-image">
+                        <p class="section7-staring-paragraph">4.9/5 average ratings</p>
+
+                    </div>
+                    <div class="section-7-staring">
+                         <img src="./image_assets/stare.png" alt="" class="section7-star-image">
+                        <p class="section7-staring-paragraph1">25 + winning awards</p>
+
+                    </div>
+                    <div class="section-7-staring">
+                         <img src="./image_assets/stare.png" alt="" class="section7-star-image">
+                        <p class="section7-staring-paragraph1">Certified product Designer</p>
+
+                    </div>
+                </div>
+                <!-- <div class="section5-part3">
                     <div class="section5-part3-slider1"></div>
                     <div class="section5-part3-slider2"></div>
                     <div class="section5-part3-slider3"></div>
                     <div class="section5-part3-slider4"></div>
-                </div>
-                <div class="section5-part4">
+                </div> -->
+                <!-- <div class="section5-part4">
                     <marquee behavior="" direction=""></marquee>
                     <ul class="section5-part4-project-list">
                         <li class="section5-part4lists">Product/project Design</li>
@@ -296,15 +328,15 @@
                         <li class="section5-part4lists">back-end engineering</li>
                         <li class="section5-part4lists">documentations</li>
                     </ul>
-                </div>
-                <div class="section5-part5">
+                </div> -->
+                <!-- <div class="section5-part5">
                     <div class="section5part5-part1">
                         <h4 class="section-5part5-title">Linante - Food Dilvery Solution </h4>
                         <img src="./image_assets/section5-part5-logo.png" alt="" class="section5-part5-logo">
                     </div>
                     <p class="section-5part5-Paragraph">Lorem ipsum dolor sit, amet consectetur adipisicing elit. Fuga, vel fugit. Accusamus ea vel id totam mollitia distinctio itaque magni rerum aliquam quae impedit beatae doloremque nobis dolorem, amet corrupti.</p>
                     
-                </div>
+                </div> -->
 
             </div>
             
@@ -312,9 +344,7 @@
                 <div class="section1">
                 <h3 class="section6-title">Technologies used </h3>
                     <p class="section6-paragraphs">
-                        Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                        Consequatur provident quae, tempora ipsam, reprehenderit saepe odio, earum autem deleniti obcaecati perspiciatis molestiae quos tenetur 
-                        debitis voluptatum vel maxime ea libero?
+                        As a full-stack developer, proficiency in a wide range of technologies is essential to create scalable and dynamic web applications. These technologies span both frontend and backend development, ensuring a seamless user experience and efficient server-side logic. Tools like React, Node.js, and Git empower developers to build interactive, responsive UIs, while databases such as MySQL and Supabase are used to manage data storage effectively. Full-stack developers leverage technologies like HTML, CSS, JavaScript, Python, and TypeScript to create feature-rich, secure, and high-performance applications.
                     </p>
                     </div>
                     <div class="section6-imageContainer section2">
@@ -334,12 +364,28 @@
                 </div>
                 <div class="section7-parts section7-part2">
                     <form action=""  method="POST" class="section7-part2 section7-part2-form">
-                            <img src="./image_assets/email.png" alt="" class="section7-part2-img">
+                            <!-- <img src="./image_assets/email.png" alt="" class="section7-part2-img">
                             <input type="email" class="section7-part2-email" placeholder="Enter email Address">
-                            <button class="section7-part2-button">send</button>
+                            <button class="section7-part2-button">send</button> -->
+                            <div class="section7-part2-form-group-container1">
+                            <div class="form-group section7-part2-form-items">
+                                <label for="" class="form-label">full name</label>
+                                <input type="text" class="form-control" placeholder="full contact name">
+                            </div>
+                             <div class="form-group section7-part2-form-items">
+                                <label for="" class="form-label">email</label>
+                                <input type="email" class="form-control" placeholder="full contact email">
+                            </div>
+                            </div>
+                            <div class="form-group section7-part2-form-items">
+                                <label for="" class="form-label">Your message</label>
+                                <textarea type="text" class="form-control form-control-message" placeholder="your message"></textarea>
+
+                            </div>
+                            <button class="contact-us-btn">Send your message</button>
                         </form>
                 </div>
-                <div class="section7-parts section7-part3">
+                <!-- <div class="section7-parts section7-part3">
                     <div class="section-7-staring">
                         <img src="./image_assets/stare.png" alt="" class="section7-star-image">
                         <p class="section7-staring-paragraph">4.9/5 average ratings</p>
@@ -355,9 +401,9 @@
                         <p class="section7-staring-paragraph1">Certified product Designer</p>
 
                     </div>
-                </div>
+                </div> -->
                 <div class="section7-parts section7-part4">
-                    <img src="./image_assets/Componentstrip.png" alt="" class="section7-part4-image">
+                    <!-- <img src="./image_assets/Componentstrip.png" alt="" class="section7-part4-image"> -->
                 </div>
 
 
